examples/test/testpolicy14299.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14299
  namespace: namespace435
spec:
  podSelector:
    matchLabels:
      key28: value3
      key22: value21
      key36: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value41
          key40: value12
          key48: value2
      podSelector:
        matchLabels:
          key39: value35
          key22: value20
          key47: value8
